# CLAMBA

./: Dockerfile  README.md  analyze_pdfs.py  clamba.config.example.json  clamba.config.examples.json  clamba.config.json  clamba_config.yaml  clamba_to_slca_simple.py  contrat_automates.json  contrat_automates_slca.json  contrat_prestation_service_voiture_automates.json  debug_clamba.py  final_contract.slc  pyproject.toml  setup.md  setup.py  slca_draft_output.json  test_installation_complet.py  test_minimal.py  test_pipeline.py  test_simple.py
clamba/:  __init__.py  __init__.py  cli.py  core.py  enums.py  json_to_slca.py  llm_interface.py  pdf_extractor.py  prompt_builder.py  safe_json.py  slca_validator.py
clamba.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
clamba/ai/: __init__.py  base.py  factory.py  ollama.py  openai.py
clamba/config/: __init__.py  settings.py
clamba/core/: __init__.py  analyzer.py  pdf_extractor.py  process_detector.py
clamba/models/: __init__.py  contract.py  process.py
clamba/utils/: __init__.py  graph.py  logger.py  sanitizer.py  validator.py
tests/: test_clamba.py
