[tool.poetry]
name = "clamba"
version = "0.1.0"
description = "CLAMBA: Générateur de Smart Legal Contract Automaton (.slca) à partir de contrats PDF."
authors = ["Hamadou Ba"]
readme = "README.md"
packages = [{ include = "clamba" }]

[tool.poetry.dependencies]
python = "^3.9"
pdfplumber = "*"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
